@@ -7,6 +7,8 @@
 //
 
 import Foundation
+
+#if !os(macOS)
 import CoreNFC
 
 @available(iOS 13, *)
@@ -272,3 +274,4 @@ public class BACHandler {
     }
     
 }
+#endif
