@@ -4,7 +4,9 @@
 //  Created by Andy Qua on 01/02/2021.
 //
 
-@available(iOS 13, *)
+import Foundation
+
+@available(iOS 13, macOS 10.15, *)
 public class COM : DataGroup {
     public private(set) var version : String = "Unknown"
     public private(set) var unicodeVersion : String = "Unknown"
