@@ -4,7 +4,9 @@
 //  Created by Andy Qua on 01/02/2021.
 //
 
-@available(iOS 13, *)
+import Foundation
+
+@available(iOS 13, macOS 10.15, *)
 public class NotImplementedDG : DataGroup {
     required init( _ data : [UInt8] ) throws {
         try super.init(data)
