@@ -7,7 +7,7 @@
 
 import Foundation
 
-@available(iOS 13, *)
+@available(iOS 13, macOS 10.15, *)
 public enum NFCViewDisplayMessage {
     case requestPresentPassport
     case authenticatingWithPassport(Int)
@@ -16,7 +16,7 @@ public enum NFCViewDisplayMessage {
     case successfulRead
 }
 
-@available(iOS 13, *)
+@available(iOS 13, macOS 10.15, *)
 extension NFCViewDisplayMessage {
     public var description: String {
         switch self {
